--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/simpleanime.css">
     <link rel="stylesheet" href="./css/grid.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="/assets/icone.ico">
     <title>Ariane Miranda - Transformando idéias em conteudo</title>
 </head>
 <body>
