--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <ul class="container depoimentos-slide depoimentos">
             <li>
                 <div class="depoimento ">
-                    <img src="./assets/avatar 1.png" alt="foto-cliente" class="avatar">
-                    <cite>Noiva cadaver</cite>
+                    <img src="./assets/foto-pessoa2.jpg" alt="foto-cliente" class="avatar">
+                    <cite>Dinhego</cite>
                     <blockquote class="">
-                        Ao contrário do que se acredita, Lorem Ipsum não é simplesmente um texto randômico. Com mais de 2000 anos, suas raízes podem ser encontradas em uma obra de literatura latina clássica datada de 45 AC. Richard McClintock, um professor de latim do Hampden-Sydney College na Virginia, pesquisou uma das mais obscuras palavras em latim, consectetur, oriunda de uma passagem de Lorem Ipsum, e, procurando por entre citações da palavra na literatura clássica, descobriu a sua indubitável origem. Lorem Ipsum vem das seções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal), de Cícero, escrito em 45 AC. Este livro é um tratado de teoria da ética muito popular na época da Rena.
+                        Melhor escritora, marketeira e futura designer de todo o mundo!!!!!!!  '-'
                     </blockquote>
                 </div>    
             </li>
