site ora depois de um detalhe dela

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/simpleslide.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="/css/animations.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/slick/slick-theme.css"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="/assets/icone.ico">
-    <title>Ariane Miranda - Transformando idéias em conteudo</title>
+    <title>Ariane Miranda - Transformando ideias em conteúdo</title>
 </head>
 <body>
     <header>
@@ -35,11 +34,11 @@
     <section class="introducao">
         <div>
             <h1 class="titulo">Ariane Miranda</h1>
-            <h2 class="subtitulo">Transformando idéias em conteudo</h2>>
+            <h2 class="subtitulo">Transformando idéias em conteudo</h2>
             <a href="contato.html"><button class="btn">Entre em contato agora!</button></a>
         </div>
     </section>
-    <main class="depoimentos" >
+    <main class="depoimentos">
         <h2 class="subtitulo">Depoimentos</h2>
         <p class="textotitulo">Veja o que estão falando sobre mim</p>
         <ul class="container depoimentos-slide depoimentos">
@@ -107,10 +106,9 @@
         <p>Todos os direitos reservados</p>
         </section>
     </footer>
-    <script src="./js/simple-slide.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="./js/slick.min.js"></script>
     <script src="./js/script.js"></script>
     
 </body>
