mandado para ka

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <nav class="container">
             <ul class="lista-menu ">
-                <li>
-                    <a href="portfolio.html">home</a>
+                <li class="selected">
+                    <a href="index.html">home</a>
                 </li>
                 <li>
                     <a href="portfolio.html">portfolio</a>
@@ -73,8 +73,9 @@
         </ul>
     </main>
     <section class="portfolio">`
-        <h2 class="subtitulo" >Portfolio</h2>
-        <div class="container">
+        <div>
+            <h2 class="subtitulo" >Portfolio</h2>
+            <div class="container">
             <div class="amostra">
                 <div class="img-portfolio item1">
                     <img src="./assets/img-port1.jpg" alt="Imagem de Portfolio">
@@ -89,23 +90,26 @@
                     </p>
                 </div>
             </div> 
+            </div>
+            <div class="botao-portfolio">
+                <a href="portfolio.html">
+                    <button class="btn">Veja meu Portfolio!!</button></a>
+            </div>
         </div>
-        <div class="botao-portfolio">
-            <a href="portfolio.html">
-                <button class="btn">Veja meu Portfolio!!</button></a>
-        </div>
+        
     </section>
     <footer>
+        <section class="direitos">
+            <p><b>Diego Nascimento</b></p> 
+         <p>Todos os direitos reservados</p>
+        </section>
         <section class="redesocial">
-            <img src="/assets/facebook.svg" alt="facebook da Ariane">
-            <img src="/assets/instagram.png" alt="instagram da Ariane">
-            <img src="/assets/twitter.svg" alt="twitter da Ariane">
+           <a href=""><img src="/assets/facebook.svg" alt="facebook da Ariane"></a> 
+           <a href=""><img src="/assets/instagram.png" alt="instagram da Ariane"></a> 
+           <a href=""><img src="/assets/twitter.svg" alt="twitter da Ariane"></a> 
         </section>
 
-        <section class="direitos">
-           <p><b>Diego Nascimento</b></p> 
-        <p>Todos os direitos reservados</p>
-        </section>
+       
     </footer>
     <script type="text/javascript" src="/js/jquery/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="/js/jquery/jquery-migrate-1.2.1.min.js"></script>
